--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,7 @@
 # These are supported funding model platforms
 
-github: [quangson91]# Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-patreon: quangson91# Replace with a single Patreon username
+github: [quangson91]
+patreon: quangson91
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ["https://paypal.me/quangson8128", "https://www.buymeacoffee.com/quangson91"]# Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ["https://paypal.me/quangson8128", "https://www.buymeacoffee.com/quangson91"]
