--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         java-version: 11.0.3
 
     - name: Clean & Build Jar
-      run: ./gradlew clean jar
+      run: ./gradlew clean test jar
     - name: Artifact restcli jar.
       uses: actions/upload-artifact@v2
       with:
