--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,1 @@
-patreon: quangson91
-custom: ["https://paypal.me/quangson8128", "https://www.buymeacoffee.com/quangson91"]
+custom: ["https://paypal.me/quangson8128"]
