--- a/.github/workflows/auto_release_snapshot.yml
+++ b/.github/workflows/auto_release_snapshot.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build project
         run: |
           ./gradlew clean jar
-          zip --junk-paths restcli build/libs/*.jar
+          sh brew/package.sh
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -51,6 +51,28 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./restcli.zip
+          asset_path: ./build/__restcli__/restcli.zip
           asset_name: restcli.zip
           asset_content_type: application/zip
+
+      - name: Upload Release Brew Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./build/__restcli__/brew_restcli.zip
+          asset_name: restcli.zip
+          asset_content_type: application/zip
+
+      - name: Upload shasum
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./build/__restcli__/shasum.txt
+          asset_name: shasum.txt
+          asset_content_type: text/plain
