--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -32,7 +32,11 @@ jobs:
           set -x
           assets="-a ./build/__restcli__/brew_restcli.zip -a ./build/__restcli__/restcli.zip -a ./build/__restcli__/checksums.txt"
           tag_name="${{ env.TAG_NAME }}"
-          hub release create "${assets}" -m "$tag_name" "$tag_name"
+          hub release create \
+          -a "./build/__restcli__/brew_restcli.zip" \
+          -a "./build/__restcli__/restcli.zip" \
+          -a "./build/__restcli__/checksums.txt" \
+          -m "$tag_name" "$tag_name"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG_NAME: ${{ github.ref }}
