--- a/.github/workflows/auto_release_snapshot.yml
+++ b/.github/workflows/auto_release_snapshot.yml
@@ -35,9 +35,12 @@ jobs:
       - name: Upload Release Asset
         run: |
           set -x
-          assets="-a ./build/__restcli__/brew_restcli.zip -a ./build/__restcli__/restcli.zip -a ./build/__restcli__/checksums.txt"
           tag_name="${{ env.BRANCH_NAME }}-${{ env.GITHUB_RUN_NUMBER }}"
-          hub release create --draft=true "${assets}" -m "$tag_name" "$tag_name"
+          hub release create --draft=true \
+          -a "./build/__restcli__/brew_restcli.zip" \
+          -a "./build/__restcli__/restcli.zip" \
+          -a "./build/__restcli__/checksums.txt" \
+          -m "$tag_name" "$tag_name"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ steps.extract_branch.outputs.branch }}
