--- a/.github/workflows/auto_release_snapshot.yml
+++ b/.github/workflows/auto_release_snapshot.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           set -x
           tag_name="${{ env.BRANCH_NAME }}-${{ env.GITHUB_RUN_NUMBER }}"
-          hub release create --draft=true \
+          hub release create --prerelease=true \
           -a "./build/__restcli__/brew_restcli.zip" \
           -a "./build/__restcli__/restcli.zip" \
           -a "./build/__restcli__/checksums.txt" \
