--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           set -x
           assets="-a ./build/__restcli__/brew_restcli.zip -a ./build/__restcli__/restcli.zip -a ./build/__restcli__/checksums.txt"
-          tag_name="${{ env.TAG_NAME }}"
+          tag_name="${GITHUB_REF##*/}"
           hub release create \
           -a "./build/__restcli__/brew_restcli.zip" \
           -a "./build/__restcli__/restcli.zip" \
@@ -39,4 +39,3 @@ jobs:
           -m "$tag_name" "$tag_name"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG_NAME: ${{ github.ref }}
