--- a/.github/workflows/auto_release_snapshot.yml
+++ b/.github/workflows/auto_release_snapshot.yml
@@ -4,7 +4,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     branches:
-      - 'dev-*'
+      - 'master'
   workflow_dispatch:
 jobs:
   build:
