--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+group=com.github.restcli
+version=2.1.0
+
 kotlin.code.style=official
 # TODO: Using graalvm instead of nashorn.
 systemProp.nashorn.args=--no-deprecation-warning
