--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           java-version: 11
 
       - name: Clean & Build Jar
-        run: ./gradlew clean test jar
+        run: ./gradlew clean build
       - name: Artifact restcli jar.
         uses: actions/upload-artifact@v2
         with:
